Bug 159938 - Moving through cells with overflowing content changes the cells' height and wrapping
Summary: Moving through cells with overflowing content changes the cells' height and w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.1.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.2 target:25...
Keywords: bibisected, bisected, regression
: 160212 (view as bug list)
Depends on:
Blocks: Calc-Cells
  Show dependency treegraph
 
Reported: 2024-02-28 11:45 UTC by Mike Kaganski
Modified: 2024-10-04 07:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A no-wrap cell with overflowing content, below a cell with newline and wrap (3.65 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-02-28 11:45 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-02-28 11:45:51 UTC
Created attachment 192846 [details]
A no-wrap cell with overflowing content, below a cell with newline and wrap

Since v.24.2, opening the attachment, and navigating down using arrow keys, changes the properties of the second row's cell.

1. Open the attachment.
2. Press Down Arrow key two times, to arrive at A3.

=> A2 becomes taller, and its content wraps.

It doesn't happen, if A1 is cleared. The cell with a newline is important for reproduction.
Comment 1 Mike Kaganski 2024-02-28 11:50:40 UTC
https://gerrit.libreoffice.org/c/core/+/164091
Comment 2 ady 2024-02-28 12:40:33 UTC Comment hidden (off-topic)
Comment 3 Commit Notification 2024-02-28 14:24:12 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f0d8f72eb3447b705d1dcdc35a6f3c66a880ab7e

tdf#159938: only apply wrap when the content was modified

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2024-02-28 14:44:25 UTC
For the record, regression introduced by 17e362e56f9e15d0214c441e632c91d22e58519d
Comment 5 Commit Notification 2024-02-28 16:08:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/153b3bae5ea6d0d59cf80c1ca1c32df8bfef57ef

tdf#159938: only apply wrap when the content was modified

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 ady 2024-02-29 07:01:03 UTC
While I can confirm that this is solved in 24.8 alpha built today 2024-02-29, there is still a related problem. See bug 159690 comment 17 for the current behavior after this bug 159938 was solved.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6a064b1967e06e40be40817deff99d00c1a8554f
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (es_AR); UI: en-US
Calc: CL threaded
Comment 7 Commit Notification 2024-02-29 15:46:58 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/91c37cdc9d779c6f1c956ffc78a688f08e6735d7

tdf#159938: sc_uicalc2: Add unittest

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 ady 2024-03-15 10:58:09 UTC
*** Bug 160212 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2024-10-03 11:33:15 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55a8fce5d76bba0657ed76c85439fac8d1d00c8d

tdf#159690 tdf#159938 Revert "tdf#158252 sc: Enable text wrapping...

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-10-03 21:42:43 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c1d2902b64dc02026f7842a43e540283b67df13d

tdf#159690 tdf#159938 Revert "tdf#158252 sc: Enable text wrapping...

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-10-04 07:25:53 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/be818a6d53f9b5dfa0d23b807463b1c00d67800d

tdf#159690 tdf#159938 Revert "tdf#158252 sc: Enable text wrapping...

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.