tdf#159938: only apply wrap when the content was modified

Change-Id: I2f18739239401085a06bbdce6623a484c13d680b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164091
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit f0d8f72eb3447b705d1dcdc35a6f3c66a880ab7e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164110
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>